[package]
description = "Fast deserialization of a single csv line"
edition = "2021"
homepage = "https://github.com/imbolc/csv-line"
keywords = ["csv", "serde"]
license = "MIT"
name = "csv-line"
readme = "README.md"
repository = "https://github.com/imbolc/csv-line"
version = "0.1.0"

[dependencies]
csv = "1.1"
quick-csv = "0.1.6"
serde = "1"
thiserror = "1"

[dev-dependencies]
csv-core = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
